edit for Confluence

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</style>
 	</head>
 	<body>
-		<article class="markdown-body">
+		<article class="wiki-content">
 <h1><a id="user-content-github-markdown-css-demo" class="anchor" href="#github-markdown-css-demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>GitHub Markdown CSS demo</h1>
 
 <p><a name="user-content-headers"></a></p><a name="user-content-headers">
